--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
   <div class="post-nav">
   	<ul class="posts">
     	{% for post in site.posts %}
-      	<li><span>{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+      	<li><span>{{ post.date | date_to_string }}</span> <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
     	{% endfor %}
   	</ul>
   </div>
@@ -15,7 +15,7 @@
 <ul class="tags">
 
 {% for tag in site.tags %}
-<li> <a href="/tag/{{ tag | first | slugize }}/">
+<li> <a href="{{ site.url }}tag/{{ tag | first | slugize }}/">
    {{ tag | first }}</a></li>
 {% endfor %}
 </ul>
