--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -24,7 +24,7 @@ layout: default
     <p class="summary">{{post.excerpt}}
     <ul class="tag_list">
       {% for tag in post.tags %}
-      <li class="inline archive_list"><a class="tag_list_link" href="/tag/{{ tag }}">{{ tag }}</a></li>
+      <li class="inline archive_list"><a class="tag_list_link" href="{{ site.url }}tag/{{ tag }}">{{ tag }}</a></li>
       {% endfor %}
     </ul>
   </li>
